src/objects/XO_Group_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Always_Set_Credit_Hold_To_False__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSP-340</description>
        <label>Always Set Credit Hold To False</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Always_Set_Geocode_Override_To_True__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSP-387</description>
        <label>Always Set Geocode Override To True</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Turn_on_Fulfillment_Callouts__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Turns on and off partner fulfillment and account update callouts.</inlineHelpText>
        <label>Turn on Fulfillment Callouts</label>
        <type>Checkbox</type>
    </fields>
    <label>XO Group Settings</label>
</CustomObject>